--- a/style.css
+++ b/style.css
@@ -12,3 +12,7 @@ h2 {
 .bixo loko img {
 	image-position: right top;
 }
+body {
+	background-image:  linear-gradient, url('https://cdn.discordapp.com/attachments/825837611897454603/828390380390842388/unknown.png');
+}
+	
