--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {font: italic 75%/125% "Comic Sans MS", cursive;}
 h1 {font-size: 44px;}
 h1 {
     text-align: center;
-    background-color: #87CEFA;
+    background-color: #ffcbdb;
     color: white;
 }
 h2 {
